fix: z-index for video component

--- a/src/app/components/video/video.component.scss
+++ b/src/app/components/video/video.component.scss
@@ -58,6 +58,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 22;
 
   &__background {
     position: relative;
